test/parser/datatype/040.stderr
At: "040.hac":10:
parse error: syntax error
parser stacks:
state	value
#STATE#	(null) 
#STATE#	(process-prototype) [5:1..43]
#STATE#	{ [5:45]
#STATE#	list<(def-body-item)>: list<(expr)>: (array-concatenation) ... ... [6:2--7:9]
#STATE#	[ [8:1]
#STATE#	(prefix-expr) [8:3..4]
#STATE#	-> [8:6]
#STATE#	keyword: spec [10:1..4]
in state #STATE#, possible rules are:
	guarded_connection_body_clause : expr RARROW . connection_body_optional  (#RULE#)
	connection_body_optional : .  (#RULE#)
acceptable tokens are: 
	'!' (shift)
	'(' (shift)
	'-' (shift)
	'[' (shift)
	']' (reduce)
	'{' (shift)
	'~' (shift)
	ID (shift)
	FLOAT (shift)
	INT (shift)
	STRING (shift)
	SCOPE (shift)
	THICKBAR (reduce)
	BOOL_TRUE (shift)
	BOOL_FALSE (shift)
